--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "setup": "npm i",
-    "setup:ci": "npm ci && npm i @nx/nx-linux-x64-gnu",
+    "setup:ci": "nx run-many -t clean && npm ci && npm i @nx/nx-linux-x64-gnu",
     "clean": "nx run-many -t clean --parallel=false && nx reset && git clean -xdf node_modules",
     "clean:cache": "rimraf -rf ./node_modules/.cache",
     "start": "nx run-many --targets=start --parallel=3 --projects=@rudderstack/analytics-js-integrations,@rudderstack/analytics-js-plugins,@rudderstack/analytics-js",
