--- a/.github/workflows/deploy-npm-v3.yml
+++ b/.github/workflows/deploy-npm-v3.yml
@@ -11,6 +11,9 @@ permissions:
   id-token: write # allows the JWT to be requested from GitHub's OIDC provider
   contents: read # This is required for actions/checkout
 
+env:
+  NODE_OPTIONS: "--no-warnings"
+
 jobs:
   deploy-tag:
     name: Deploy to NPM v3
