--- a/.github/workflows/draft-new-release-v3.yml
+++ b/.github/workflows/draft-new-release-v3.yml
@@ -3,6 +3,9 @@ name: Draft new release v3
 on:
   workflow_dispatch:
 
+env:
+  NODE_OPTIONS: "--no-warnings"
+
 jobs:
   draft-new-release:
     name: Draft a new release v3
