--- a/.github/workflows/test-v3.yml
+++ b/.github/workflows/test-v3.yml
@@ -8,6 +8,9 @@ on:
     branches: ['main', 'develop', 'v3-hotfix/*']
     types: ['opened', 'reopened', 'synchronize']
 
+env:
+  NODE_OPTIONS: "--no-warnings"
+
 jobs:
   build:
     name: 'Unit Tests, Coverage & Sonar v3'
