chore: upgrade dev dependencies to the latest versions

--- a/package.json
+++ b/package.json
@@ -99,8 +99,7 @@
     "ramda": "0.29.0",
     "rudder-component-cookie": "0.0.1",
     "serialize-javascript": "6.0.1",
-    "storejs": "2.0.5",
-    "uuid": "8.3.2"
+    "storejs": "2.0.5"
   },
   "devDependencies": {
     "@babel/core": "7.22.15",
@@ -117,10 +116,10 @@
     "@commitlint/config-lerna-scopes": "17.7.0",
     "@digitalroute/cz-conventional-changelog-for-jira": "8.0.1",
     "@jscutlery/semver": "3.1.0",
-    "@nx/eslint-plugin": "16.7.4",
-    "@nx/jest": "16.7.4",
-    "@nx/js": "16.7.4",
-    "@nx/workspace": "16.7.4",
+    "@nx/eslint-plugin": "16.8.1",
+    "@nx/jest": "16.8.1",
+    "@nx/js": "16.8.1",
+    "@nx/workspace": "16.8.1",
     "@originjs/vite-plugin-federation": "1.2.3",
     "@rollup/plugin-alias": "5.0.0",
     "@rollup/plugin-babel": "6.0.3",
@@ -129,30 +128,29 @@
     "@rollup/plugin-node-resolve": "15.2.1",
     "@rollup/plugin-replace": "5.0.2",
     "@rollup/plugin-terser": "0.4.3",
-    "@size-limit/file": "8.2.6",
-    "@size-limit/webpack": "8.2.6",
-    "@types/component-emitter": "1.2.11",
-    "@types/crypto-js": "4.1.1",
+    "@size-limit/file": "9.0.0",
+    "@size-limit/webpack": "9.0.0",
+    "@types/component-emitter": "1.2.12",
+    "@types/crypto-js": "4.1.2",
     "@types/jest": "29.5.4",
     "@types/lodash.clonedeep": "4.5.7",
     "@types/lodash.isstring": "4.0.7",
     "@types/node": "18.17.12",
     "@types/ramda": "0.29.3",
-    "@types/uuid": "8.3.4",
-    "@typescript-eslint/eslint-plugin": "5.62.0",
-    "@typescript-eslint/parser": "5.62.0",
-    "assert": "2.0.0",
+    "@typescript-eslint/eslint-plugin": "5.60.1",
+    "@typescript-eslint/parser": "5.60.1",
+    "assert": "2.1.0",
     "babel-eslint": "10.1.0",
     "babel-plugin-transform-object-hasown": "1.1.0",
     "commitizen": "4.3.0",
     "commitlint": "17.7.1",
-    "core-js": "3.32.1",
+    "core-js": "3.32.2",
     "dotenv": "16.3.1",
     "eslint": "8.48.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "17.1.0",
-    "eslint-config-prettier": "8.10.0",
+    "eslint-config-prettier": "8.1.0",
     "eslint-import-resolver-typescript": "3.6.0",
     "eslint-plugin-compat": "4.2.0",
     "eslint-plugin-import": "2.28.1",
@@ -172,13 +170,13 @@
     "lint-staged": "14.0.1",
     "madge": "6.1.0",
     "msw": "1.3.0",
-    "nx": "16.7.4",
+    "nx": "16.8.1",
     "patch-package": "8.0.0",
     "prettier": "3.0.3",
-    "rollup": "3.20.2",
+    "rollup": "3.29.0",
     "rollup-plugin-copy": "3.5.0",
     "rollup-plugin-delete": "2.0.0",
-    "rollup-plugin-dts": "5.3.1",
+    "rollup-plugin-dts": "6.0.1",
     "rollup-plugin-exclude-dependencies-from-bundle": "1.1.23",
     "rollup-plugin-external-globals": "0.8.0",
     "rollup-plugin-filesize": "10.0.0",
@@ -188,13 +186,13 @@
     "rollup-plugin-serve": "2.0.2",
     "rollup-plugin-typescript2": "0.35.0",
     "rollup-plugin-visualizer": "5.9.2",
-    "size-limit": "8.2.6",
+    "size-limit": "9.0.0",
     "standard-version": "9.5.0",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
     "tslib": "2.6.2",
-    "typescript": "5.1.6",
-    "user-agent-data-types": "0.3.1"
+    "typescript": "5.2.2",
+    "user-agent-data-types": "0.4.1"
   },
   "overrides": {
     "@xmldom/xmldom": "0.8.5",
