--- a/.prettierignore
+++ b/.prettierignore
@@ -2,12 +2,12 @@ dist/
 node_modules/
 reports/
 stats/
+assets/
 cdnSDK.js
 cdnSDKv3.js
 CHANGELOG.md
 CONTRIBUTING.md
 
-examples/chrome-extension/background-script/rudderAnalytics.js
-examples/chrome-extension/background-script-websockets/rudderAnalytics.js
-examples/chrome-extension/content-script-v1.1/foreground.js
-examples/chrome-extension/content-script-v3/foreground.js
+examples/chrome-extension/**/rudderAnalytics.js
+examples/chrome-extension/**/foreground.js
+examples/**/index.html
