ci(monorepo): fix issue with version tags and beta

--- a/packages/analytics-js-common/project.json
+++ b/packages/analytics-js-common/project.json
@@ -70,7 +70,7 @@
       "options": {
         "baseBranch": "main",
         "preset": "conventional",
-        "tagPrefix": "${projectName}@"
+        "tagPrefix": "{projectName}@"
       }
     },
     "github": {
@@ -83,6 +83,7 @@
     "deploy": {
       "executor": "ngx-deploy-npm:deploy",
       "options": {
+        "tag": "beta",
         "access": "public"
       }
     }
