--- a/packages/analytics-js/project.json
+++ b/packages/analytics-js/project.json
@@ -101,7 +101,7 @@
       "options": {
         "baseBranch": "main",
         "preset": "conventional",
-        "tagPrefix": "${projectName}@"
+        "tagPrefix": "{projectName}@"
       }
     },
     "github": {
@@ -114,6 +114,7 @@
     "deploy": {
       "executor": "ngx-deploy-npm:deploy",
       "options": {
+        "tag": "beta",
         "access": "public"
       }
     }
