--- a/packages/loading-scripts/project.json
+++ b/packages/loading-scripts/project.json
@@ -57,7 +57,7 @@
       "options": {
         "baseBranch": "main",
         "preset": "conventional",
-        "tagPrefix": "${projectName}@"
+        "tagPrefix": "{projectName}@"
       }
     },
     "github": {
