--- a/packages/analytics-js-plugins/project.json
+++ b/packages/analytics-js-plugins/project.json
@@ -94,7 +94,8 @@
       "options": {
         "baseBranch": "main",
         "preset": "conventional",
-        "tagPrefix": "{projectName}@"
+        "tagPrefix": "{projectName}@",
+        "trackDeps": true
       }
     },
     "github": {
