--- a/packages/analytics-js/project.json
+++ b/packages/analytics-js/project.json
@@ -101,7 +101,8 @@
       "options": {
         "baseBranch": "main",
         "preset": "conventional",
-        "tagPrefix": "{projectName}@"
+        "tagPrefix": "{projectName}@",
+        "trackDeps": true
       }
     },
     "github": {
