--- a/packages/analytics-v1.1/project.json
+++ b/packages/analytics-v1.1/project.json
@@ -90,7 +90,8 @@
       "options": {
         "baseBranch": "main",
         "preset": "conventional",
-        "tagPrefix": "{projectName}@"
+        "tagPrefix": "{projectName}@",
+        "trackDeps": true
       }
     },
     "github": {
