--- a/packages/loading-scripts/project.json
+++ b/packages/loading-scripts/project.json
@@ -57,7 +57,8 @@
       "options": {
         "baseBranch": "main",
         "preset": "conventional",
-        "tagPrefix": "{projectName}@"
+        "tagPrefix": "{projectName}@",
+        "trackDeps": true
       }
     },
     "github": {
