--- a/packages/sanity-suite/project.json
+++ b/packages/sanity-suite/project.json
@@ -27,7 +27,8 @@
       "options": {
         "baseBranch": "main",
         "preset": "conventional",
-        "tagPrefix": "{projectName}@"
+        "tagPrefix": "{projectName}@",
+        "trackDeps": true
       }
     }
   }
