ci(monorepo): fix npm deploy action dist paths

--- a/.github/workflows/deploy-npm-v3.yml
+++ b/.github/workflows/deploy-npm-v3.yml
@@ -68,6 +68,7 @@ jobs:
           BUGSNAG_RELEASE_STAGE: 'production'
         run: |
           npm set //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
+          npm run build:package
           npm run deploy:npm -- --base=$last_monorepo_version --head=$current_monorepo_version
 
       - name: Send message to Slack channel for v3
