--- a/packages/analytics-js/project.json
+++ b/packages/analytics-js/project.json
@@ -116,7 +116,8 @@
       "executor": "ngx-deploy-npm:deploy",
       "options": {
         "tag": "beta",
-        "access": "public"
+        "access": "public",
+        "distFolderPath": "packages/analytics-js/dist"
       }
     }
   }
