--- a/packages/analytics-js-plugins/project.json
+++ b/packages/analytics-js-plugins/project.json
@@ -109,7 +109,8 @@
       "executor": "ngx-deploy-npm:deploy",
       "options": {
         "tag": "beta",
-        "access": "public"
+        "access": "public",
+        "distFolderPath": "packages/analytics-js-plugins/dist"
       }
     }
   }
