ci(monorepo): fix npm deploy action dist paths for service worker

--- a/packages/analytics-js-common/project.json
+++ b/packages/analytics-js-common/project.json
@@ -84,9 +84,9 @@
     "deploy": {
       "executor": "ngx-deploy-npm:deploy",
       "options": {
-        "tag": "beta",
         "access": "public",
-        "distFolderPath": "packages/analytics-js-common/dist"
+        "distFolderPath": "packages/analytics-js-common",
+        "noBuild": true
       }
     }
   }
