--- a/packages/analytics-js/project.json
+++ b/packages/analytics-js/project.json
@@ -115,9 +115,9 @@
     "deploy": {
       "executor": "ngx-deploy-npm:deploy",
       "options": {
-        "tag": "beta",
         "access": "public",
-        "distFolderPath": "packages/analytics-js/dist"
+        "distFolderPath": "packages/analytics-js",
+        "noBuild": true
       }
     }
   }
