--- a/packages/analytics-js-service-worker/project.json
+++ b/packages/analytics-js-service-worker/project.json
@@ -83,9 +83,9 @@
     "deploy": {
       "executor": "ngx-deploy-npm:deploy",
       "options": {
-        "tag": "beta",
         "access": "public",
-        "distFolderPath": "packages/analytics-js-service-worker/dist"
+        "distFolderPath": "packages/analytics-js-service-worker/dist/npm",
+        "noBuild": true
       }
     }
   }
