--- a/.github/workflows/publish-new-release-v3.yml
+++ b/.github/workflows/publish-new-release-v3.yml
@@ -58,8 +58,8 @@ jobs:
 
       - name: Get the two latest versions
         run: |
-          CURRENT_VERSION=$(git tag -l "v*" --sort=-version:refname | head -n 1)
-          LAST_VERSION=$(git tag -l "v*" --sort=-version:refname | head -n 2 | awk 'NR == 2 { print $1 }')
+          CURRENT_VERSION=$(git tag -l "v3*" --sort=-version:refname | head -n 1)
+          LAST_VERSION=$(git tag -l "v3*" --sort=-version:refname | head -n 2 | awk 'NR == 2 { print $1 }')
 
           echo "Current version: $CURRENT_VERSION"
           echo "Previous version: $LAST_VERSION"
