ci(monorepo): fix npm ci in github actions

--- a/.github/workflows/deploy-npm-v3.yml
+++ b/.github/workflows/deploy-npm-v3.yml
@@ -58,6 +58,7 @@ jobs:
           BUGSNAG_RELEASE_STAGE: 'production'
         run: |
           npm run setup:ci
+          npm i ngx-deploy-npm
 
       - name: Publish package to NPM
         env:
