--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "packages/*"
   ],
   "scripts": {
-    "setup": "npm i",
+    "setup": "npm i --include=optional",
     "setup:ci": "npm ci && npm i @nx/nx-linux-x64-gnu",
     "clean": "npm run clean:output && nx reset && git clean -xdf node_modules",
     "clean:cache": "rimraf -rf ./node_modules/.cache",
@@ -170,6 +170,7 @@
     "lint-staged": "14.0.1",
     "madge": "6.1.0",
     "msw": "1.3.0",
+    "ngx-deploy-npm": "7.0.1",
     "nx": "16.8.1",
     "patch-package": "8.0.0",
     "prettier": "3.0.3",
@@ -193,6 +194,12 @@
     "tslib": "2.6.2",
     "typescript": "5.2.2",
     "user-agent-data-types": "0.4.2"
+  },
+  "optionalDependencies": {
+    "@nx/nx-darwin-arm64": "16.8.1",
+    "@nx/nx-darwin-x64": "16.8.1",
+    "@nx/nx-linux-x64-gnu": "16.8.1",
+    "@nx/nx-win32-x64-msvc": "16.8.1"
   },
   "overrides": {
     "@xmldom/xmldom": "0.8.5",
