ci(monorepo): prepare to release v1.1 from develop/main branches

--- a/packages/analytics-js-common/project.json
+++ b/packages/analytics-js-common/project.json
@@ -71,7 +71,9 @@
         "baseBranch": "main",
         "preset": "conventional",
         "tagPrefix": "{projectName}@",
-        "trackDeps": true
+        "trackDeps": true,
+        "releaseAs": "prerelease",
+        "preid": "beta"
       }
     },
     "github": {
