--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "build:v1.1": "nx run-many -t build --parallel=false --projects=rudder-sdk-js",
     "build:sanity": "rm -rf packages/sanity-suite/dist && nx run-many --targets=build:all,build:all:staging --parallel=false --projects=@rudderstack/analytics-js-sanity-suite",
     "bump-version:monorepo": "npm version prerelease --git-tag-version false",
-    "release": "nx affected --base=origin/main --target=version --parallel=1 --skipCommitTypes=docs,ci,chore --releaseAs=prerelease --preid=beta",
+    "release": "nx affected --base=origin/main --target=version --parallel=1 --skipCommitTypes=docs,ci,chore",
     "release:github": "nx affected --target=github --parallel=1 --skipCommitTypes=docs,ci,chore",
     "deploy:npm": "nx affected --target=deploy --parallel=1 --skipCommitTypes=docs,ci,chore"
   },
