--- a/packages/loading-scripts/project.json
+++ b/packages/loading-scripts/project.json
@@ -58,7 +58,9 @@
         "baseBranch": "main",
         "preset": "conventional",
         "tagPrefix": "{projectName}@",
-        "trackDeps": true
+        "trackDeps": true,
+        "releaseAs": "prerelease",
+        "preid": "beta"
       }
     },
     "github": {
