--- a/packages/sanity-suite/project.json
+++ b/packages/sanity-suite/project.json
@@ -28,7 +28,9 @@
         "baseBranch": "main",
         "preset": "conventional",
         "tagPrefix": "{projectName}@",
-        "trackDeps": true
+        "trackDeps": true,
+        "releaseAs": "prerelease",
+        "preid": "beta"
       }
     }
   }
