chore: ignore the latest changelog file in prettier

--- a/.prettierignore
+++ b/.prettierignore
@@ -6,6 +6,7 @@ assets/
 cdnSDK.js
 cdnSDKv3.js
 CHANGELOG.md
+CHANGELOG_LATEST.md
 CONTRIBUTING.md
 
 examples/chrome-extension/**/rudderAnalytics.js
