feat: deprecate support of common names for integrations (#1374)
* chore: upgrade storejs package to the latest version

* feat: remove common names mapping dependency

* refactor: fix code smells

* fix: move integrations object mutation to the core SDK

* chore: ignore the latest changelog file in prettier

--- a/packages/analytics-js-integrations/package.json
+++ b/packages/analytics-js-integrations/package.json
@@ -102,8 +102,7 @@
     "on-body": "0.0.1",
     "ramda": "0.29.0"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "overrides": {},
   "browserslist": {
     "production": [
