--- a/packages/analytics-js-plugins/package.json
+++ b/packages/analytics-js-plugins/package.json
@@ -73,6 +73,7 @@
     "@preact/signals-core": "1.4.0",
     "@rudderstack/analytics-js-common": "3.0.0-beta.7",
     "crypto-js": "4.1.1",
+    "crypto-es": "2.0.4",
     "ramda": "0.29.0"
   },
   "devDependencies": {},
