--- a/packages/analytics-js-integrations/babel.config.json
+++ b/packages/analytics-js-integrations/babel.config.json
@@ -10,5 +10,5 @@
     ],
     "@babel/typescript"
   ],
-  "plugins": [["@babel/plugin-transform-object-assign"], ["babel-plugin-transform-object-hasown"]]
+  "plugins": []
 }
