--- a/packages/analytics-js/babel.config.json
+++ b/packages/analytics-js/babel.config.json
@@ -11,5 +11,5 @@
     ],
     "@babel/typescript"
   ],
-  "plugins": [["@babel/plugin-transform-object-assign"], ["babel-plugin-transform-object-hasown"]]
+  "plugins": []
 }
