--- a/package.json
+++ b/package.json
@@ -78,8 +78,8 @@
     "component-emitter": "1.3.0",
     "component-querystring": "2.0.1",
     "component-url": "0.2.1",
+    "crypto-es": "^2.0.4",
     "crypto-js": "4.1.1",
-    "crypto-es": "2.0.4",
     "get-value": "3.0.1",
     "is": "3.3.0",
     "lodash.clonedeep": "4.5.0",
