--- a/.github/workflows/draft-new-release-v3.yml
+++ b/.github/workflows/draft-new-release-v3.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 env:
-  NODE_OPTIONS: "--no-warnings"
+  NODE_OPTIONS: '--no-warnings'
 
 jobs:
   draft-new-release:
@@ -83,7 +83,7 @@ jobs:
           ./scripts/generate-last-release-changelog.sh
           npm run bump-version:monorepo
           npx replace $CURRENT_VERSION_VALUE $NEW_VERSION_VALUE sonar-project.properties
-          npm run setup
+          npm run setup:ci
           git add .
           git commit -m "chore: sync versions and generate release logs" -n
 
