test(analytics-js-sanity-suite): fix ignore list for sourceConfig tests

--- a/package.json
+++ b/package.json
@@ -48,9 +48,9 @@
     "build:sanity": "rm -rf packages/sanity-suite/dist && nx run-many --targets=build:all --parallel=false --projects=@rudderstack/analytics-js-sanity-suite",
     "build:sanity:staging": "rm -rf packages/sanity-suite/dist && nx run-many --targets=build:all:staging --parallel=false --projects=@rudderstack/analytics-js-sanity-suite",
     "bump-version:monorepo": "npm version prerelease --git-tag-version false",
-    "release": "nx affected --base=origin/main --target=version --parallel=1 --skipCommitTypes=docs,ci,chore",
-    "release:github": "nx affected --target=github --parallel=1 --skipCommitTypes=docs,ci,chore",
-    "deploy:npm": "nx affected --target=deploy --parallel=1 --skipCommitTypes=docs,ci,chore"
+    "release": "nx affected --base=origin/main --target=version --parallel=1 --skipCommitTypes=docs,ci,chore,test",
+    "release:github": "nx affected --target=github --parallel=1 --skipCommitTypes=docs,ci,chore,test",
+    "deploy:npm": "nx affected --target=deploy --parallel=1 --skipCommitTypes=docs,ci,chore,test"
   },
   "author": "RudderStack",
   "license": "MIT",
