--- a/package.json
+++ b/package.json
@@ -69,10 +69,12 @@
     "@ndhoule/each": "2.0.1",
     "@ndhoule/extend": "2.0.0",
     "@ndhoule/keys": "2.0.0",
+    "@preact/signals-core": "1.5.0",
     "@segment/localstorage-retry": "1.3.0",
     "@segment/loosely-validate-event": "2.0.0",
     "@segment/top-domain": "3.0.1",
     "@vespaiach/axios-fetch-adapter": "0.3.1",
+    "assert": "2.1.0",
     "axios": "0.27.2",
     "axios-retry": "3.7.0",
     "component-each": "0.2.6",
@@ -80,6 +82,7 @@
     "component-querystring": "2.0.1",
     "component-url": "0.2.1",
     "crypto-js": "4.1.1",
+    "deep-object-diff": "1.1.9",
     "get-value": "3.0.1",
     "is": "3.3.0",
     "lodash.clonedeep": "4.5.0",
@@ -96,6 +99,7 @@
     "md5": "2.3.0",
     "ms": "2.1.3",
     "obj-case": "0.2.1",
+    "object-path": "0.11.8",
     "on-body": "0.0.1",
     "ramda": "0.29.0",
     "rudder-component-cookie": "0.0.1",
@@ -103,7 +107,7 @@
     "storejs": "2.0.6"
   },
   "devDependencies": {
-    "@babel/core": "7.22.17",
+    "@babel/core": "7.22.20",
     "@babel/eslint-parser": "7.22.15",
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/plugin-proposal-private-methods": "7.18.6",
@@ -111,7 +115,7 @@
     "@babel/plugin-transform-arrow-functions": "7.22.5",
     "@babel/plugin-transform-object-assign": "7.22.5",
     "@babel/plugin-transform-runtime": "7.22.15",
-    "@babel/preset-env": "7.22.15",
+    "@babel/preset-env": "7.22.20",
     "@babel/preset-typescript": "7.22.15",
     "@commitlint/config-conventional": "17.7.0",
     "@commitlint/config-lerna-scopes": "17.7.0",
@@ -121,7 +125,7 @@
     "@nx/jest": "16.8.1",
     "@nx/js": "16.8.1",
     "@nx/workspace": "16.8.1",
-    "@originjs/vite-plugin-federation": "1.2.3",
+    "@originjs/vite-plugin-federation": "1.3.1",
     "@rollup/plugin-alias": "5.0.0",
     "@rollup/plugin-babel": "6.0.3",
     "@rollup/plugin-commonjs": "25.0.4",
@@ -133,11 +137,11 @@
     "@size-limit/webpack": "9.0.0",
     "@types/component-emitter": "1.2.12",
     "@types/crypto-js": "4.1.2",
-    "@types/jest": "29.5.4",
+    "@types/jest": "29.5.5",
     "@types/lodash.clonedeep": "4.5.7",
     "@types/lodash.isstring": "4.0.7",
     "@types/node": "18.17.12",
-    "@types/ramda": "0.29.3",
+    "@types/ramda": "0.29.4",
     "@typescript-eslint/eslint-plugin": "5.60.1",
     "@typescript-eslint/parser": "5.60.1",
     "assert": "2.1.0",
@@ -167,15 +171,15 @@
     "jest-junit": "16.0.0",
     "jest-sonar": "0.2.16",
     "jest-watch-typeahead": "2.2.2",
-    "jscpd": "3.5.9",
+    "jscpd": "3.5.10",
     "lint-staged": "14.0.1",
     "madge": "6.1.0",
-    "msw": "1.3.0",
+    "msw": "1.3.1",
     "ngx-deploy-npm": "7.0.1",
     "nx": "16.8.1",
     "patch-package": "8.0.0",
     "prettier": "3.0.3",
-    "rollup": "3.29.1",
+    "rollup": "3.29.2",
     "rollup-plugin-copy": "3.5.0",
     "rollup-plugin-delete": "2.0.0",
     "rollup-plugin-dts": "6.0.2",
