--- a/packages/analytics-js/package.json
+++ b/packages/analytics-js/package.json
@@ -69,12 +69,8 @@
     "release": "npm publish"
   },
   "dependencies": {
-    "@lukeed/uuid": "2.0.1",
-    "@preact/signals-core": "1.4.0",
-    "@rudderstack/analytics-js-common": "3.0.0-beta.8",
-    "@rudderstack/analytics-js-plugins": "3.0.0-beta.8",
-    "ramda": "0.29.0",
-    "storejs": "2.0.6"
+    "@rudderstack/analytics-js-common": "*",
+    "@rudderstack/analytics-js-plugins": "*"
   },
   "devDependencies": {},
   "browserslist": {
