--- a/packages/analytics-v1.1/package.json
+++ b/packages/analytics-v1.1/package.json
@@ -86,21 +86,18 @@
     "directory": "packages/analytics-v1.1"
   },
   "dependencies": {
-    "@lukeed/uuid": "2.0.1",
-    "@rudderstack/analytics-js-common": "3.0.0-beta.8",
+    "@rudderstack/analytics-js-common": "*",
     "@segment/localstorage-retry": "1.3.0",
     "@segment/loosely-validate-event": "2.0.0",
     "@vespaiach/axios-fetch-adapter": "0.3.1",
-    "assert": "2.0.0",
+    "assert": "2.1.0",
     "axios": "0.27.2",
     "axios-retry": "3.7.0",
     "component-emitter": "1.3.0",
-    "get-value": "3.0.1",
     "is": "3.3.0",
     "lodash.clonedeep": "4.5.0",
     "lodash.isstring": "4.0.1",
-    "ms": "2.1.3",
-    "ramda": "0.29.0"
+    "ms": "2.1.3"
   },
   "devDependencies": {},
   "overrides": {},
