--- a/packages/sanity-suite/package.json
+++ b/packages/sanity-suite/package.json
@@ -55,10 +55,10 @@
   "author": "RudderStack",
   "license": "MIT",
   "dependencies": {
-    "@rudderstack/analytics-js": "3.0.0-beta.8",
+    "@rudderstack/analytics-js": "*",
     "deep-object-diff": "1.1.9",
     "object-path": "0.11.8",
-    "rudder-sdk-js": "2.42.1"
+    "rudder-sdk-js": "*"
   },
   "devDependencies": {},
   "overrides": {},
