--- a/nx.json
+++ b/nx.json
@@ -23,6 +23,11 @@
     }
   },
   "defaultBase": "main",
+  "pluginsConfig": {
+    "@nx/js": {
+      "analyzeSourceFiles": true
+    }
+  },
   "targetDefaults": {
     "test": {
       "inputs": ["default", "^default", "{workspaceRoot}/jest.preset.js"]
