--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "package": "nx run-many -t pack --parallel=false",
     "test": "nx run-many -t test",
     "test:ci": "nx run-many -t test --parallel=false --configuration=ci --runInBand --maxWorkers=1 --forceExit",
+    "check:lint:ci": "nx run-many -t check:lint:ci --parallel=false --verbose",
     "check:lint": "nx run-many -t check:lint --parallel=false --verbose",
-    "check:lint:dev": "nx run-many -t check:lint:dev --parallel=false --verbose",
     "check:size": "nx run-many -t check:size --parallel=false --verbose",
     "check:size:build": "nx run-many -t build-check-size",
     "check:size:json": "npm run check:size:json:ci -- --verbose",
@@ -85,14 +85,10 @@
     "deep-object-diff": "1.1.9",
     "get-value": "3.0.1",
     "is": "3.3.0",
-    "lodash.clonedeep": "4.5.0",
-    "lodash.difference": "4.5.0",
     "lodash.get": "4.4.2",
     "lodash.isempty": "4.4.0",
     "lodash.isequal": "4.5.0",
-    "lodash.isstring": "4.0.1",
     "lodash.isundefined": "3.0.1",
-    "lodash.merge": "4.6.2",
     "lodash.pick": "4.4.0",
     "lodash.pickby": "4.6.0",
     "lodash.tostring": "4.1.4",
@@ -124,6 +120,7 @@
     "@nx/eslint-plugin": "16.8.1",
     "@nx/jest": "16.8.1",
     "@nx/js": "16.8.1",
+    "@nx/linter": "16.8.1",
     "@nx/workspace": "16.8.1",
     "@originjs/vite-plugin-federation": "1.3.1",
     "@rollup/plugin-alias": "5.0.0",
@@ -192,6 +189,7 @@
     "rollup-plugin-serve": "2.0.2",
     "rollup-plugin-typescript2": "0.35.0",
     "rollup-plugin-visualizer": "5.9.2",
+    "serve": "14.2.1",
     "size-limit": "9.0.0",
     "standard-version": "9.5.0",
     "ts-jest": "29.1.1",
