--- a/packages/analytics-v1.1/project.json
+++ b/packages/analytics-v1.1/project.json
@@ -85,6 +85,24 @@
       },
       "dependsOn": ["prepare-test-mocks"]
     },
+    "lint": {
+      "executor": "@nx/linter:eslint",
+      "outputs": ["{options.outputFile}"],
+      "options": {
+        "hasTypeAwareRules": true,
+        "lintFilePatterns": [
+          "packages/analytics-v1.1/src/**/*.{ts,js}",
+          "packages/analytics-v1.1/{package,project}.json"
+        ]
+      },
+      "configurations": {
+        "ci": {
+          "force": true,
+          "outputFile": "packages/analytics-v1.1/reports/eslint.json",
+          "format": "json"
+        }
+      }
+    },
     "version": {
       "executor": "@jscutlery/semver:version",
       "options": {
@@ -98,6 +116,8 @@
       "executor": "@jscutlery/semver:github",
       "options": {
         "tag": "rudder-sdk-js@2.42.1",
+        "title": "rudder-sdk-js@2.42.1",
+        "discussion-category": "rudder-sdk-js@2.42.1",
         "notesFile": "./packages/analytics-v1.1/CHANGELOG_LATEST.md"
       }
     },
