--- a/packages/analytics-js-plugins/project.json
+++ b/packages/analytics-js-plugins/project.json
@@ -89,6 +89,24 @@
         }
       }
     },
+    "lint": {
+      "executor": "@nx/linter:eslint",
+      "outputs": ["{options.outputFile}"],
+      "options": {
+        "hasTypeAwareRules": true,
+        "lintFilePatterns": [
+          "packages/analytics-js-plugins/src/**/*.{ts,js}",
+          "packages/analytics-js-plugins/{package,project}.json"
+        ]
+      },
+      "configurations": {
+        "ci": {
+          "force": true,
+          "outputFile": "packages/analytics-js-plugins/reports/eslint.json",
+          "format": "json"
+        }
+      }
+    },
     "version": {
       "executor": "@jscutlery/semver:version",
       "options": {
@@ -104,15 +122,9 @@
       "executor": "@jscutlery/semver:github",
       "options": {
         "tag": "@rudderstack/analytics-js-plugins@3.0.0-beta.8",
+        "title": "@rudderstack/analytics-js-plugins@3.0.0-beta.8",
+        "discussion-category": "@rudderstack/analytics-js-plugins@3.0.0-beta.8",
         "notesFile": "./packages/analytics-js-plugins/CHANGELOG_LATEST.md"
-      }
-    },
-    "deploy": {
-      "executor": "ngx-deploy-npm:deploy",
-      "options": {
-        "access": "public",
-        "distFolderPath": "packages/analytics-js-plugins",
-        "noBuild": true
       }
     }
   }
