--- a/packages/analytics-js-service-worker/package.json
+++ b/packages/analytics-js-service-worker/package.json
@@ -40,8 +40,8 @@
     "build:package": "npm run build:npm:modern",
     "test": "nx test --maxWorkers=50%",
     "test:ci": "nx test --parallel=false --configuration=ci --runInBand --maxWorkers=1 --forceExit",
-    "check:lint:dev": "eslint --ext .js,.ts src",
-    "check:lint": "eslint --ext .js,.ts src -f json -o reports/eslint.json || exit 0",
+    "check:lint": "nx lint",
+    "check:lint:ci": "nx lint --configuration=ci",
     "check:size:build": "npm run build:package",
     "check:size": "npm run check:size:build && size-limit",
     "check:size:json": "size-limit --json",
